Quorum3/Library/Tests/Actions/Pass/ReturnIfElseBool1.quorum
class Main
    action Main
        integer a = -2
        output foo(a)
    end

    action foo (integer a) returns boolean
        if a < 0
            return true
        else
            return false
        end
    end
end