Quorum3/Library/Tests/Actions/Fail/MissingReturn9.quorum
class Main 
    action Main
        Test()
    end

    action Test returns boolean
        if 1 = 1
        elseif 2 = 2
            return false
        else
            return false
        end
    end
end